# irim2025-demo

./: .gitignore  README.md  convert.py  decode_smpl_bag.py  evaluate_npz.py  evaluate_offline.py  evaluate_online.py  utils.py  visualize.py
irim_demo_ws/irim_demo_ws/src/smpl_traj_pkg/: setup.cfg  setup.py
irim_demo_ws/src/smpl_traj_pkg/: setup.py
irim_demo_ws/src/smpl_traj_pkg/launch/: demo_irim.launch.py
irim_demo_ws/src/smpl_traj_pkg/smpl_traj_pkg/: smpl_traj_node.py
irim_demo_ws/src/src/smpl_traj_pkg/: package.xml
irim_demo_ws/src/src/smpl_traj_pkg/smpl_traj_pkg/: smpl_traj_node.py
